--- a/man/zpaqfranz.pod
+++ b/man/zpaqfranz.pod
@@ -1,1 +1,177 @@
+#   zpaqfranz.pod - zpaqfranz 55.13 man page source
+#
+#   Copyright
+#
+#       Released to public domain by Franco Corbelli in 2022
+#
+#   Description
+#
+#	To learn what TOP LEVEL section to use in manual pages,
+#	see POSIX/Susv standard and "Utility Description Defaults" at
+#	http://www.opengroup.org/onlinepubs/009695399/utilities/xcu_chap01.html#tag_01_11
+#
+#	This is manual page in Perl POD format. Read more at
+#	http://perldoc.perl.org/perlpod.html or run command:
+#
+#	    perldoc perlpod | less
+#
+#	To check the syntax:
+#
+#	    podchecker *.pod
+#
+#	Create manual page with command:
+#
+#	    pod2man PAGE.N.pod > PAGE.N
 
+=pod
+
+=head1 NAME
+
+zpaqfranz - Swiss army knife for backup and disaster recovery
+
+=head1 SYNOPSIS
+
+zpaqfranz I<command> I<archive>[C<.zpaq>] [I<files|directory>]... [-I<switches>]...
+
+=head1 DESCRIPTION
+
+I<zpaqfranz> is something like 7z or RAR on steroids, with deduplicated "snapshots" (versions)
+ Conceptually similar to Mac time machine, but much more efficiently
+ Keeps backup always-to-always, no need to ever prune (CryptoLocker)
+ Easily handles millions of files and TBs of data, non-latin support
+ Cloud backups with full encryption, minimal data transfer/bandwidth
+ Data integrity check CRC32+XXHASH|SHA-1|SHA-2|SHA-3|MD5|XXH3|BLAKE3
+ Thorough data verification, multithread support (real world 1GB+/s)
+ Specific zfs handling functions,full multiplatform interoperability
+ Particularly suitable for minimal space storage of virtual machines
+
+ Windows, FreeBSD, OpenBSD, Linux, MacOS, Solaris, OmniOS and others
+
+
+=head1 COMMANDS
+
+I<archive> assume by default a C<.zpaq> extension.
+
+If I<archive> contains wildcards C<*> or C<?>, then the archive is
+multipart, where C<*> matches the part number and C<?> matches
+single digits. The concatenation starts from 1. 
+ For example, C<arc??> would match the concatenation of 
+ C<arc01.zpaq>,
+ C<arc02.zpaq>, 
+ C<arc03.zpaq> (...)
+ until the last one.
+ DO NOT FORGET THE DOUBLE QUOTEs!
+
+The help is embedded : please use that or read the wiki on github
+
+ zpaqfranz           : short version
+ zpaqfranz h         : list of commands and switches
+ zpaqfranz h h       : help on everything (ALL IN)
+ Help     on XXX     : zpaqfranz h   XXX
+ Examples of XXX     : zpaqfranz -he XXX
+
+ XXX can be a COMMAND
+ a                   : add files to archive
+ autotest            : operational self test 
+ b                   : benchmark and CPU stresser
+ c                   : dir compare
+ cp                  : copy files (with ETA)
+ d                   : deduplication
+ dir                 : just about a mini Windows' dir
+ dirsize             : folder size into an archive
+ f                   : fill (or wipe) drive space
+ i                   : information 
+ k                   : kill files not in archive
+ l                   : list archive content
+ m                   : merge (consolidate) multipart archives
+ n                   : decimation
+ p                   : paranoid test
+ password            : set/change/remove password
+ pause               : just like 'pause' in Windows' batch
+ r                   : something like multithreaded robocopy
+ rsync               : delete rsync temporary files
+ s                   : return size of folders and free spaces
+ sum                 : hashing / deduplication finder
+ t                   : test archive's integrity
+ trim                : trim (reduce size) of incompleted archives
+ utf                 : test and fix "strange" filenames
+ v                   : verify archive's hashes against filesystem
+ w                   : chunked "RAMDISK" test-extraction
+ x                   : extraction
+ z                   : delete empty directory (zero length)
+
+=head1 OPTIONS
+
+ Embbedded help on optional switches
+
+ zpaqfranz h main    : main switches
+ zpaqfranz h franz   : zpaqfranz's switches
+ zpaqfranz h normal  : 2nd line switches
+ zpaqfranz h voodoo  : nerd things
+
+=head1 EXIT STATUS
+
+0=successfull, 1=warning, 2=error
+
+=head1 AVAILABILITY
+
+https://github.com/fcorbelli/zpaqfranz
+
+=head1 BUGS
+
+Compiling on BIG ENDIAND / "weird" CPUs requires the right switches or bad things can happen. Use the autotest command if necessary.
+
+=head1 LIMITATIONS
+
+zpaqfranz does not store owner/group of the file, symlinks or whatever.
+If you really need you must use tar.
+
+=head1 SEE ALSO
+
+C<bzip2(1)>
+C<gzip(1)>
+C<p7zip(1)>
+C<rar(1)>
+C<unzip(1)>
+C<zip(1)>
+C<zpaq(1)>
+
+=head1 AUTHORS
+
+This is a fork of zpaq 7.15 made by Franco Corbelli and released under MIT in 2021-2022.
+
+Licenses of various software (more details in the source code):
+I<Public domain> for zpaq, libzpaq, AES from libtomcrypt by Tom St Denis,salsa20 by D. J. Bernstein, mod by data man and reg2s patch from encode.su forum Sha1Opt.asm and 7zAsm.asm by Igor Pavlov;
+I<MIT> for Code from libdivsufsort 2.0 (C) Yuta Mori, 2003-2008, Embedded Artistry, Nilsimsa implementation by Sepehr Laal;
+I<zlib> for Crc32.h Copyright (c) 2011-2019 Stephan Brumme, part of hash-library (MD5, SHA-3), crc32c.c Copyright (C) 2015 Mark Adler;
+I<The Unlicense> for wyhash (experimental) by WangYi;
+I<BSD 2> for xxHash Copyright (C) 2012-2020 Yann Collet;
+I<CC0 1.0 / Apache License 2.0> for the BLAKE3 hasher;
+I<Nothing explicit, seems BSD> for Whirlpool by Paulo Barreto and Vincent Rijmen.
+
+=head1 EXAMPLE 1 create a temporary file, add /etc to mybackup.zpaq
+
+ echo test_ONE >/etc/testfile.txt
+ zpaqfranz a /tmp/mybackup.zpaq /etc 
+
+=head1 EXAMPLE 2 create another version ("snapshot") with different content
+
+ echo test_TWO_FILE_LONGER_THAT_THE_FIRST >/etc/testfile.txt
+ zpaqfranz a /tmp/mybackup.zpaq /etc
+
+=head1 EXAMPLE 3 show archive info (two versions/"snapshots", 1 and 2)
+
+ zpaqfranz i /tmp/mybackup.zpaq
+
+=head1 EXAMPLE 4 list the two different versions (look at different file size)
+
+ zpaqfranz l /tmp/mybackup.zpaq -find testfile.txt -until 1
+ zpaqfranz l /tmp/mybackup.zpaq -find testfile.txt -until 2
+
+=head1 EXAMPLE 5 restore the first version of /etc/testfile.txt (aka: rollback to "snapshot" #1)
+
+ zpaqfranz x /tmp/mybackup.zpaq /etc/testfile.txt -to /tmp/restoredfolder/the_first.txt -until 1 -space
+ cat /tmp/restoredfolder/the_first.txt
+
+
+=cut
