--- a/man/zpaqfranz.pod
+++ b/man/zpaqfranz.pod
@@ -192,7 +192,7 @@ made by Franco Corbelli and released under MIT in 2021-2023.
 Licenses of various software (more details in the source code)
 
 
-I<Public domain> for zpaq, libzpaq, AES from libtomcrypt by Tom St Denis,salsa20 by D. J. Bernstein, mod by data man and reg2s patch from encode.su forum Sha1Opt.asm, 7zAsm.asm by Igor Pavlov and PDCursesMod;
+I<Public domain> for zpaq, libzpaq, AES from libtomcrypt by Tom St Denis,salsa20 by D. J. Bernstein, mod by data man and reg2s patch from encode.su forum Sha1Opt.asm, 7zAsm.asm by Igor Pavlov, PDCursesMod and SHA-Intrinsics;
 I<MIT> for Code from libdivsufsort 2.0 (C) Yuta Mori, 2003-2008, Embedded Artistry, Nilsimsa implementation by Sepehr Laal;
 I<zlib> for Crc32.h Copyright (c) 2011-2019 Stephan Brumme, part of hash-library (MD5, SHA-3), crc32c.c Copyright (C) 2015 Mark Adler;
 I<The Unlicense> for wyhash (experimental) by WangYi;
@@ -200,7 +200,6 @@ I<BSD 2> for xxHash Copyright (C) 2012-2020 Yann Collet;
 I<CC0 1.0 / Apache License 2.0> for the BLAKE3 hasher and HighWay64 hasher;
 I<Nothing explicit, seems BSD> for Whirlpool by Paulo Barreto and Vincent Rijmen;
 I<almost-unrestricted> Twofish implementation by Niels Ferguson;
-I<GPL3+> Rufus: The Reliable USB Formatting Utility.
 
 
 =head1 EXAMPLE 1 create a temporary file, add /etc to mybackup.zpaq
